# cpp-raytracer

./: CMakeLists.txt  README.md
raytracer/: raytracer.h  raytracer2.h  readme.md  test_asan.cpp
raytracer-b2/: test_asan.cpp
raytracer-debug/: stub.txt  test_asan.cpp
raytracer-geom/: geometry.h  intersection.h  ray.h  readme.md  sphere.h  test.cpp  triangle.h  vector.h
raytracer-reader/: material.h  object.h  readme.md  scene.h  test.cpp
